# STASC

./: .gitignore  README.md  baseline.py  cove.py  debate.py  fine_tune.py  pyproject.toml  requirements.txt  self_refine.py  sft_baseline.py  stasc.py  train.sh
config/: accelerate.yaml  defaults.yaml
config/algo/: _default.yaml  baseline_cot.yaml  baseline_no_cot.yaml  baseline_rag.yaml  cove.yaml  critic.yaml  debate_common.yaml  debate_finalize.yaml  self_refine.yaml  sft.yaml  star.yaml  stasc.yaml  stasc_EIE.yaml  stasc_EIF.yaml  stasc_ENE.yaml  stasc_ENF.yaml  stasc_FIE.yaml  stasc_FIF.yaml  stasc_FNE.yaml  stasc_FNF.yaml
config/dataset/: hotpot.yaml  math500.yaml  nq.yaml
config/experiment/: stasc.yaml
config/lora/: default.yaml
config/model/: _default.yaml  llama_small.yaml  phi4_mini.yaml  qwen_2.5_1.5b.yaml  qwen_3_1.7b.yaml  qwen_3_4b.yaml
config/training/: default.yaml
configs/: baseline_cot.yaml  baseline_no_cot.yaml  config.py  fine_tune.yaml  generate_stasc_configs.py  rag_config.yaml  self_correction_star_config.yaml  self_refine_config.yaml  sft.yaml  stasc_config.yaml
configs/algo/: baseline_rag.yaml  debate_finalize.yaml  stasc.yaml  stasc_config.yaml
configs/data_config/: hotpot.yaml  math500.yaml  nq.yaml
configs/fine_tuning/: accelerate_config.yaml
configs/hotpot/: cove.yaml  debate.yaml  fine_tune.yaml  sft.yaml  stasc_config.yaml
configs/math500/: acc_config2.yaml  sft.yaml
configs/model/: qwen_2.5_1.5b.yaml  qwen_3_1.7b.yaml
configs/nq/: baseline_rag.yaml  critic.yaml  fine_tune.yaml  self_refine_config.yaml  test_conf_accelerate.yaml
configs_old/algo/: baseline_cot.yaml  baseline_no_cot.yaml  critic.yaml  debate_common.yaml  self_refine.yaml  sft.yaml
configs_old/data_config/: hotpot.yaml
configs_old/model/: phi4_mini.yaml  qwen_2.5_1.5b.yaml  qwen_3_4b.yaml
generator_src/: stasc_vllm_generation.py
notebooks/: test2.ipynb  test_output.ipynb
prompts/: __init__.py  baseline_builder.py  cove_builder.py  debate_builder.py  math_builder.py  qa_builder.py  self_refine_builder.py
src/: baseline.py  config.py  cove.py  debate.py  executor.py  fine_tune.py  generate.py  self_refine.py  sft_baseline.py  stasc.py  vanilla_star.py
src/configs/: config.py
src/evaluation/: eval_utils.py  math_grader.py  math_normalize.py  qa_grader.py  qwen_math_parser.py
src/executors/: __init__.py  baseline.py  cove.py  factory.py  stasc.py
src/finetune/: fine_tune.py  utils.py
src/generator_src/: star_vllm_generation.py  stasc_helper.py  stasc_vllm_generation.py
src/helper/: generation.py  stasc.py
src/old/: debate.py  qa_builder.py  self_refine.py  sft_baseline.py  star_vllm_generation.py  stasc.py  stasc_vllm_generation.py  vanilla_star.py
src/prompts/: base.py  baseline_builder.py  cove_builder.py  debate_builder.py  enum.py  (+5 more)
utils/: ft_utils.py  utils.py
(+20 files in other folders)
